bug fix for layout issue

--- a/src/components/design.module.css
+++ b/src/components/design.module.css
@@ -1,7 +1,6 @@
 .navcontainer {
   display: flex;
   flex-wrap: wrap;
-  padding-left: 2%;
 }
 .contentcontainer {
   box-shadow: 5px 5px -1px 9px #a2dda2;
